testsuite/tests/typecheck/should_fail/T14607.stderr

T14607.hs:22:9: error:
    • Expecting one more argument to ‘LamCons a '()’
      Expected a type, but ‘LamCons a  '()’ has kind ‘() -> *’
    • In the type signature: mk :: LamCons a  '()
      In the instance declaration for ‘Mk a’

T14607.hs:22:19: error:
    • Expected a type, but ‘'()’ has kind ‘()’
    • In the second argument of ‘LamCons’, namely ‘'()’
      In the type signature: mk :: LamCons a '()
      In the instance declaration for ‘Mk a’
